tests/machine/x/c/join_multi.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:50Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  int id;
  char *name;
} customer_t;
typedef struct {
  int len;
  customer_t *data;
} customer_list_t;
customer_list_t create_customer_list(int len) {
  customer_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int id;
  int customerId;
} order_t;
typedef struct {
  int len;
  order_t *data;
} order_list_t;
order_list_t create_order_list(int len) {
  order_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(order_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int orderId;
  char *sku;
} item_t;
typedef struct {
  int len;
  item_t *data;
} item_list_t;
item_list_t create_item_list(int len) {
  item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  char *name;
  char *sku;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int main() {
  customer_t tmp1_data[] = {(customer_t){.id = 1, .name = "Alice"},
                            (customer_t){.id = 2, .name = "Bob"}};
  customer_list_t tmp1 = {2, tmp1_data};
  customer_list_t customers = tmp1;
  order_t tmp2_data[] = {(order_t){.id = 100, .customerId = 1},
                         (order_t){.id = 101, .customerId = 2}};
  order_list_t tmp2 = {2, tmp2_data};
  order_list_t orders = tmp2;
  item_t tmp3_data[] = {(item_t){.orderId = 100, .sku = "a"},
                        (item_t){.orderId = 101, .sku = "b"}};
  item_list_t tmp3 = {2, tmp3_data};
  item_list_t items = tmp3;
  result_item_list_t tmp4 =
      result_item_list_t_create(orders.len * customers.len * items.len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < orders.len; tmp6++) {
    order_t o = orders.data[tmp6];
    for (int tmp7 = 0; tmp7 < customers.len; tmp7++) {
      customer_t c = customers.data[tmp7];
      if (!(o.customerId == c.id)) {
        continue;
      }
      for (int tmp8 = 0; tmp8 < items.len; tmp8++) {
        item_t i = items.data[tmp8];
        if (!(o.id == i.orderId)) {
          continue;
        }
        tmp4.data[tmp5] = (result_item_t){.name = c.name, .sku = i.sku};
        tmp5++;
      }
    }
  }
  tmp4.len = tmp5;
  result_item_list_t result = tmp4;
  printf("--- Multi Join ---\n");
  for (int tmp9 = 0; tmp9 < result.len; tmp9++) {
    result_item_t r = result.data[tmp9];
    printf("%s bought item %s\n", r.name, r.sku);
  }
  return 0;
}
